# hello-world-avs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/workflows/: docs.yml  slither.yml  test.yml
aggregator-node/: Cargo.toml
challenger-node/: Cargo.toml
contracts/: README.md  foundry.toml
contracts/script/: AVSDeployer.s.sol  SquaringAVSDeployer.s.sol
contracts/script/config/local/: avs.config.json
contracts/script/output/local/: avs_output.json  slashing_output.json
contracts/script/utils/: Utils.sol
contracts/src/: ERC20Mock.sol  HelloWorldServiceManager.sol  IHelloWorldServiceManager.sol  ISquaringTaskManager.sol  SquaringServiceManager.sol  SquaringTaskManager.sol
contracts/test/: SquaringTaskManager.t.sol
docs/: eigenlayer.md
operator-node/: Cargo.toml
operator-node/src/: main.rs
task-generator-api/: Cargo.toml
task-generator-api/src/: main.rs
