[workspace]
members = [
    "task-generator-api",
    "aggregator-node",
    "operator-node",
    "challenger-node",
]
resolver = "3"

[workspace.package]
license-file = "LICENSE"
authors = ["jessepinkman9900"]
rust-version = "1.85.1"
categories = ["eigenlayer-avs"]
keywords = ["eigenlayer", "avs", "ethereum", "blockchain"]
repository = "https://github.com/jessepinkman9900/hello-world-avs"
documentation = "https://jessepinkman9900.github.io/hello-world-avs"
homepage = ""
edition = "2024"


[workspace.dependencies]
eigensdk = { version = "0.5.0", features = ["full"] }
alloy = { version = "0.12.6", features = ["full"] }

envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }

# async
futures-util = "0.3"
tokio = "1.44"

# tracing
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# misc
eyre = "0.6"
